tests/fail/elaboration/record-proj/field-not-found.fathom
//~ exit-code = 1

let _ : Bool = {x=false}.y;
let _ : Bool = {x=false}.x.y;

{}
